<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/formulario_cadastro"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/foto"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/foto_aluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvNome"
        android:text="@string/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <EditText
        android:hint="@string/nome_aluno"
        android:ems="10"
        android:id="@+id/edNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/Telefone"
        android:id="@+id/tvTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <EditText
        android:inputType="phone"
        android:ems="10"
        android:hint="@string/Telefone"
        android:id="@+id/edTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <SeekBar
        android:id="@+id/sbNota"
        android:max="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/salvar_dados"
        android:id="@+id/btnSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
</ScrollView>